data/issues_nolabel/nolabel_test_14446.txt
[Mac] Changes in fast-math-flags LLVM API cause XLA enabled build to fail

System information

Have I written custom code (as opposed to using a stock example script provided in TensorFlow): No
OS Platform and Distribution (e.g., Linux Ubuntu 16.04): MacOS 10.13 High Sierra
TensorFlow installed from (source or binary): Source
TensorFlow version (use command below): HEAD
Python version: 3.6/2.7
Bazel version (if compiling from source): 0.7.0
GCC/Compiler version (if compiling from source): 9.0.0
CUDA/cuDNN version: N/A
GPU model and memory: N/A
Exact command to reproduce:

Follow instructions in docs and build optimized for native architecture with XLA enabled (assumes fix in #14288).
Describe the problem
LLVM latest release v5.0.0 does not include recent fast-math-flags LLVM API changes already updated into TensorFlow codebase.
Next LLVM release (v5.0.1) scheduled for the end of November, in the meanwhile besides building LLVM with CMake (?) there is no solution (?) but to wait.
Disclaimer: I'm new to LLVM and stuff so if I'm missing something I apologize and appreciate any insight.
tensorflow/compiler/xla/service/llvm_ir/llvm_util.cc:560:11: error: no member named 'setFast' in 'llvm::FastMathFlags'
    flags.setFast();
    ~~~~~ ^